--- a/DXWebApplication/DXWebApplication.csproj
+++ b/DXWebApplication/DXWebApplication.csproj
@@ -262,7 +262,9 @@
       <DependentUpon>AccountingDbContext.edmx</DependentUpon>
     </Compile>
     <Compile Include="Models\DBRead\JOB_JOBS.cs" />
+    <Compile Include="Models\DBRead\WST_WorkStatus.cs" />
     <Compile Include="Models\DBWrite\JOB_JOBS.cs" />
+    <Compile Include="Models\DBWrite\WST_WorkStatus.cs" />
     <Compile Include="Models\Enums\GenderCollection.cs" />
     <Compile Include="Models\Enums\KindOfWorkStatus.cs" />
     <Compile Include="Models\Filter\Job_Filter.cs" />
