--- a/DXWebApplication/DXWebApplication.csproj
+++ b/DXWebApplication/DXWebApplication.csproj
@@ -255,6 +255,9 @@
     <Content Include="Views\Home\WorkStatus.cshtml" />
     <Content Include="Views\Home\ViewReport.cshtml" />
     <Content Include="Views\Home\ViewBatchReport.cshtml" />
+    <Content Include="Views\Home\Employee.cshtml" />
+    <Content Include="Views\Home\_PartialEmpGridView.cshtml" />
+    <Content Include="Views\Home\_PartialempsEditForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -285,12 +288,18 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>AccountingDbContext.edmx</DependentUpon>
     </Compile>
+    <Compile Include="Models\ACC_EMP_Employee.cs">
+      <DependentUpon>AccountingDbContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\DBRead\ACC_EMP_Employee.cs" />
     <Compile Include="Models\DBRead\JOB_JOBS.cs" />
     <Compile Include="Models\DBRead\WST_WorkStatus.cs" />
+    <Compile Include="Models\DBWrite\ACC_EMP_Employee.cs" />
     <Compile Include="Models\DBWrite\JOB_JOBS.cs" />
     <Compile Include="Models\DBWrite\WST_WorkStatus.cs" />
     <Compile Include="Models\Enums\GenderCollection.cs" />
     <Compile Include="Models\Enums\KindOfWorkStatus.cs" />
+    <Compile Include="Models\Enums\MartialStatus.cs" />
     <Compile Include="Models\Filter\Job_Filter.cs" />
     <Compile Include="Models\JOB_JOBS.cs">
       <DependentUpon>AccountingDbContext.tt</DependentUpon>
