--- a/DXWebApplication/DXWebApplication.csproj
+++ b/DXWebApplication/DXWebApplication.csproj
@@ -268,6 +268,8 @@
     <Content Include="Views\Home\_PartialSalGridView.cshtml" />
     <Content Include="Views\Home\ViewSalReport.cshtml" />
     <Content Include="Views\Home\_PartialEmpcontractEditForm.cshtml" />
+    <Content Include="Views\Home\ExternalEditForm.cshtml" />
+    <Content Include="Views\Home\_PartialExternalEditForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
