--- a/DXWebApplication/DXWebApplication.csproj
+++ b/DXWebApplication/DXWebApplication.csproj
@@ -190,13 +190,6 @@
     <Content Include="Scripts\knockout-3.3.0.debug.js" />
     <Content Include="Scripts\knockout-3.3.0.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <EntityDeploy Include="Models\AccountingDbContext.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>AccountingDbContext.Designer.cs</LastGenOutput>
-    </EntityDeploy>
-    <Content Include="Models\AccountingDbContext.edmx.diagram">
-      <DependentUpon>AccountingDbContext.edmx</DependentUpon>
-    </Content>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
     <Content Include="Content\bootstrap.rtl.css.map" />
     <Content Include="Content\bootstrap.min.css.map" />
@@ -213,6 +206,13 @@
     <Content Include="Content\bootstrap-grid.rtl.css.map" />
     <Content Include="Content\bootstrap-grid.min.css.map" />
     <Content Include="Content\bootstrap-grid.css.map" />
+    <EntityDeploy Include="Models\AccountingDbContext.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>AccountingDbContext.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\AccountingDbContext.edmx.diagram">
+      <DependentUpon>AccountingDbContext.edmx</DependentUpon>
+    </Content>
     <None Include="packages.config" />
     <Content Include="Scripts\bootstrap.min.js.map" />
     <Content Include="Scripts\bootstrap.js.map" />
@@ -270,6 +270,7 @@
     <Content Include="Views\Home\_PartialEmpcontractEditForm.cshtml" />
     <Content Include="Views\Home\ExternalEditForm.cshtml" />
     <Content Include="Views\Home\_PartialExternalEditForm.cshtml" />
+    <Content Include="Views\Home\_PartialContractExternalEditForm.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
