--- a/DXWebApplication/Web.config
+++ b/DXWebApplication/Web.config
@@ -1,4 +1,5 @@
-<?xml version="1.0" ?><!--
+﻿<?xml version="1.0" encoding="utf-8"?>
+<!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
@@ -16,10 +17,10 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="data source=(localdb)\mssqllocaldb;initial catalog=aspnet-DXWebApplication-20240428125628;integrated security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="AccountingDbContext" connectionString="metadata=res://*/Models.AccountingDbContext.csdl|res://*/Models.AccountingDbContext.ssdl|res://*/Models.AccountingDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=verb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="localhost_verb_Connection" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=verb" />
     <add name="localhost_verb_Connection 1" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=verb" />
     <add name="localhost_verb_Connection 2" connectionString="XpoProvider=MSSqlServer;data source=localhost;integrated security=SSPI;initial catalog=verb" />
+    <add name="AccountingDbContext" connectionString="metadata=res://*/Models.AccountingDbContext.csdl|res://*/Models.AccountingDbContext.ssdl|res://*/Models.AccountingDbContext.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=verb;integrated security=True;trustservercertificate=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
